# reversi

./: CMakeLists.txt
src/: CMakeLists.txt  board.cpp  board.hpp  human.cpp  human.hpp  main.cpp  minimax.cpp  minimax.hpp  reversi.cpp  reversi.hpp
tests/: CMakeLists.txt  test_board.cpp  test_minimax.cpp  test_reversi.cpp
